objects/Bug__c.object
<CustomObject>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user that completed the submission of the bug to the bug system.</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Release_Version__c</fullName>
        <inlineHelpText>This is supplied by the bug system if integrated bug and is the release version being targeted to include the fix.</inlineHelpText>
        <label>Target Release Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Version__c</fullName>
        <description>= Target Version in Jira</description>
        <label>Target Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted to Dev - Enhance</fullName>
                </value>
                <value>
                    <fullName>Submitted to Dev - Bug</fullName>
                </value>
                <value>
                    <fullName>Submitted to Dev - Support</fullName>
                </value>
                <value>
                    <fullName>Submitted to Dev - Work Item</fullName>
                </value>
                <value>
                    <fullName>Submitted to Dev - Work Order</fullName>
                </value>
                <value>
                    <fullName>Updated by Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Flow_Identifier__c</fullName>
        <description>Used in flow to determine newly created record.</description>
        <label>Unique Flow Identifier</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <label>Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weighting_Last_Updated__c</fullName>
        <label>Weighting Last Updated</label>
        <type>DateTime</type>
    </fields>
    <label>Bug</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Bug_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Planned_Completion__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Case_Product_Family__c</columns>
        <columns>Case_Product_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Biztalk</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Bug_Server__c</columns>
        <columns>Bug_Number__c</columns>
        <columns>Bugzilla_URL__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Case_Product_Family__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Integrated</value>
        </filters>
        <label>Biztalk</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_JIRA_Bugs</fullName>
        <columns>NAME</columns>
        <columns>Bug_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Case_Product_Family__c</columns>
        <columns>Case_Product_Line__c</columns>
        <columns>Case_Product_Category__c</columns>
        <columns>Target_Release_Version__c</columns>
        <columns>Target_Version__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jira_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New JIRA Bugs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Desk_Issues</fullName>
        <columns>NAME</columns>
        <columns>Bug_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Case_Product_Family__c</columns>
        <columns>Case_Product_Line__c</columns>
        <columns>Case_Product_Category__c</columns>
        <columns>Target_Release_Version__c</columns>
        <columns>Target_Version__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bug_Number__c</field>
            <operation>startsWith</operation>
            <value>XSD</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Service Desk Issues</label>
    </listViews>
    <nameField>
        <displayFormat>Bug-{0}</displayFormat>
        <label>SF Bug Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <recordTypes>
        <fullName>Integrated</fullName>
        <active>true</active>
        <description>Bugs for Broadband Support, Paradigm, Broadcast Master, Landmark OSI, Landmark Airtime Sales, Landmark Rights &amp; Scheduling, EAS product lines  ID 012i0000000xw9l</description>
        <label>Integrated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Jira</fullName>
        <active>true</active>
        <description>For bugs integrated with Jira for PND products.  ID 0120Z0000011xlc</description>
        <label>Integrated Jira</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Jira_Cloud</fullName>
        <active>true</active>
        <label>Integrated Jira Cloud</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Jira_Cloud_MS</fullName>
        <active>true</active>
        <description>Special record type for managed services becasue they want a different set of fields</description>
        <label>Integrated Jira Cloud MS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Jira_Feature</fullName>
        <active>true</active>
        <description>id=0120Z0000011yb4</description>
        <label>Integrated Jira Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Integrated</fullName>
        <active>true</active>
        <description>Bugs for non-integrated bug tracking systems.  ID 012i0000000xw9m</description>
        <label>Non-Integrated</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Line_is_Invalid</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Integrated&quot;, 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Broadband Support&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Paradigm&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Broadcast Master&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark OSI&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark Airtime Sales&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark Sales&quot;)),
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark OSI Sales&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark Rights &amp; Scheduling&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Landmark Analytics&quot;)), 
NOT(ISPICKVAL(Case__r.Product_Family__c, &quot;Novar&quot;)), 
NOT(ISBLANK(Submitted_Date__c)))</errorConditionFormula>
        <errorMessage>Bugs that integrate with external bug systems can only be created against cases in the following product lines: Broadband Support, Paradigm, Novar, Broadcast Master, Landmark: OSI, OSI Sales, Airtime Sales or Rights and Scheduling.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Validation_Comment_after_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( OR (ISPICKVAL(Field_Validation_Status__c,&quot;FAILED&quot;),
ISPICKVAL(Field_Validation_Status__c,&quot;Won&apos;t Validate&quot;),
ISPICKVAL(Field_Validation_Status__c,&quot;Blocked&quot;)), 
ISBLANK(Field_Validation_Comment__c),
NOT(Closed__c) )</errorConditionFormula>
        <errorMessage>Please enter a reason for your Validation Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wait_for_bug_number_after_submitting</fullName>
        <active>false</active>
        <description>Weird as hell but I can&apos;t get this not to fire.  Going to shut it off and warn the few people not to overdo it. - Darcie 4/29/2020</description>
        <errorConditionFormula>AND ( NOT(ISBLANK(PRIORVALUE( Submitted_Date__c ) )), 
ISBLANK(Bug_Number__c),  Bug_Server__c &lt;&gt; &quot;Jira&quot;,

AND ( $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Interface Account&quot;, $Profile.Name &lt;&gt; &quot;Imagine - API User&quot; )
)</errorConditionFormula>
        <errorMessage>You have already submitted the bug.  Please wait for the bug developers to respond.</errorMessage>
    </validationRules>
</CustomObject>